ADD SWAGGER DOCUMENTATION FOR WEB SOCKET!
